tests/invalid/missing_mid_op.c
int main() {
    return 1 < > 3;
}
// ERROR: Line 2, Error 2009